deployments/base2/speedtest/speed-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: speedtest-pod
  labels:
    name: speedtest-pod
    test: hi
spec:
  containers:
    - name: speedtest
      image: openspeedtest/latest
      ports:
        - containerPort: 3000
