deployments/base2/speedtest/speed-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: speedtest-service
  namespace: default
spec:
  selector:
    name: speedtest-pod
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3000
